2005-11-09  Kei Sakamoto  <sakamoto.kei@renesas.com>

	* remote-m32r-sdi.c: Update copyright years.
	(m32r_resume): Write DBT at word-aligned addresses.
	(m32r_wait): Use SDI_WRITE_MEMORY to remove DBT.

2005-11-07  Andrew Stubbs  <andrew.stubbs@st.com>

	* Makefile.in (tui-winsource.o): Add gdb_assert.h to dependencies.

2005-11-03  Wu Zhou  <woodzltc@cn.ibm.com>

        Checked in by Elena Zannoni  <ezannoni@redhat.com>

	* dwarf2read.c (read_structure_type): Add IBM XL C++
	specific code to set TYPE_VPTR_FIELDNO and TYPE_VPTR_BASETYPE
	of a virtual class if a field named "__vfp" is found. 

2005-11-03  Jim Blandy  <jimb@redhat.com>

        Checked in by Elena Zannoni  <ezannoni@redhat.com>	

	* dwarf2read.c (file_full_name): Cope with file numbers that are
	out of range for the given line header.

2005-11-03  Daniel Jacobowitz  <dan@codesourcery.com>

        Checked in by Elena Zannoni  <ezannoni@redhat.com>

	* elfread.c (elf_symtab_read): Add number_of_symbols and
	symbol_table as arguments.  Do not load the symbol table
	here.
	(elf_symfile_read): Load the static and dynamic symbol tables
	here, before calling elf_symtab_read.  Also load any synthetic
	symbols and process those.

2005-11-03 Andrew Cagney  <cagney@gnu.org>

	Checked in by Elena Zannoni  <ezannoni@redhat.com>

	* dwarf2loc.c (dwarf2_evaluate_loc_desc): Handle DW_OP_piece
	reads.

2005-11-03  Daniel Jacobowitz  <dan@codesourcery.com>

	* linux-nat.c (linux_nat_resume): Add more debugging messages.  Do
	not short-circuit resuming all threads if the signal will be ignored
	in linux_nat_wait.

2005-11-02  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Changes sinces GDB 6.3 are now labled as changes in GDB 6.4.
	* README: Update README for GDB 6.4 release by replacing all 6.3
	occurrences with 6.4.

2005-11-02  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Bump version number to 6.3.90 in preparation for
	the 6.4 release.

2005-11-01  Paul Gilliam  <pgilliam@us.ibm.com>
